Add support for various JVMs
* AdoptOpenJDK 8 and 11
* Oracle and OpenJDK 11
* SAP Machine 11

Document fix for Java 11 modules